<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <EditText

        android:id="@+id/valorDaDespesa"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/valor_do_serviço"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/como_foi_o_atendimento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valorDaDespesa" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/dezpct"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pergunta">

        <RadioButton
            android:id="@+id/quinzepct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incrivel_15" />

        <RadioButton
            android:id="@+id/dezpct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bom_10" />

        <RadioButton
            android:id="@+id/cincopct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_5" />

        <RadioButton
            android:id="@+id/zeropct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pode_melhorar_0" />


    </RadioGroup>

    <Switch
        android:id="@+id/arredondamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/arredondar_gorjeta_para_cima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tip_options"
        app:layout_constraintTop_toBottomOf="@id/tip_options" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arredondamento" />


    <TextView
        android:id="@+id/resultadoFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calcular" />


</androidx.constraintlayout.widget.ConstraintLayout>